# cybersecurity-ai-assistant

./: LICENSE  README.md  pyproject.toml  server_key
cybersecurity_agent/: traffic_gen.py
cybersecurity_agent/honeypot/ssh/: README.md  service.py
honeypot/ssh/: README.md  server_key  service.py
langflow_objects/: Prod_flow.json
