[project]
name = "cybersecurity-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.17.1",
    "paramiko>=3.5.1",
    "grip>=4.6.2",
    "netmiko>=4.5.0",
    "paramiko>=3.5.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scapy>=2.6.1",
]
